<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardElevation="@dimen/zxing_standard_padding"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recipientName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/darkblue"
            android:text="@string/donation_recipient_name"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/listedAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_amount"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:layout_below="@id/recipientName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/donation_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_item"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:layout_below="@id/listedAmount"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/donation_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_location"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:layout_below="@id/donation_item"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/donation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_date"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"
            android:layout_alignBaseline="@id/listedAmount"/>

        <TextView
            android:id="@+id/donation_redeemed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_redeemed"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"
            android:layout_alignBaseline="@id/donation_item"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>